修复扫描