@@ -2,3 +2,4 @@
 -Xmx2048m
 -Dfile.encoding=UTF-8
 -Dproject.build.sourceEncoding=UTF-8
+--add-opens java.base/java.lang=ALL-UNNAMED
